<?xml version="1.0" encoding="utf-8"?><!-- list_item_sub_option.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8sp">

    <ImageView
        android:id="@+id/subOptionImageView"
        android:layout_width="50sp"
        android:layout_height="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="8sp"
        android:contentDescription="Sub-option Image"
        android:src="@drawable/forgot_password" />

    <TextView
        android:id="@+id/subOptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginStart="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/subOptionImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/minusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36sp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/minus_button"
        android:padding="9sp"
        android:src="@drawable/subtract_outline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/plusButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/countTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6sp"
        android:text="@string/count"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/plusButton"
        app:layout_constraintStart_toEndOf="@id/minusButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/plusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9sp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/plus_button"
        android:padding="9sp"
        android:src="@drawable/add_outline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
