<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/fragment_user_profile_dialog.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/CustomDialogTheme"
    android:padding="20dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userProfileImageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/menu_img"
        android:scaleType="centerCrop" />

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/userProfileImageView"
        app:layout_constraintEnd_toEndOf="@id/userProfileImageView"
        app:layout_constraintTop_toTopOf="@id/userProfileImageView"
        app:layout_constraintBottom_toBottomOf="@id/userProfileImageView"
        android:layout_centerInParent="true"
        android:background="@android:color/transparent"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/userProfileImageView"
        android:layout_height="wrap_content">


        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="12dp"
            android:src="@drawable/delete_shape"
            android:background="@android:color/transparent"
            android:contentDescription="@string/delete_button"/>

        <ImageButton
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/deleteButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="40dp"
            android:padding="12dp"
            android:src="@drawable/edit_shape"
            android:background="@android:color/transparent"
            android:contentDescription="@string/edit_button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
